eclipse-workspace/padmini/AlRayan/Zensar Sandbox Full Components/src/objects/Asset_Redeption__c.object
<CustomObject>
    <fields>
        <fullName>Arrears__c</fullName>
        <globalPicklist>Yes_No</globalPicklist>
        <label>Arrears</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Checked_by_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Checked by 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Asset_Redemptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Checked_by_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Checked by 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Asset_Redemptions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Asset Redemptions</relationshipLabel>
        <relationshipName>Asset_Redemptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Asset Redemptions</relationshipLabel>
        <relationshipName>Asset_Redemptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DS1_5_working_days_after_last_payment__c</fullName>
        <globalPicklist>Yes_No</globalPicklist>
        <inlineHelpText>DS1 to be executed 5 working days after last payment</inlineHelpText>
        <label>DS1 5 working days after last payment</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_checked_for_approval__c</fullName>
        <label>Date checked for approval</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_documents_sent__c</fullName>
        <label>Date documents sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Redemption_TH__c</fullName>
        <label>Date of Redemption (TH)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Earliest_DS1_Execution_Date__c</fullName>
        <formula>Date_of_Redemption_TH__c  + 7</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Earliest DS1 Execution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fees_Received_in_1100_841020_826__c</fullName>
        <description>Fees Received in 1100-841020-826 attached (TH)</description>
        <label>Fees Received in 1100-841020-826</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>If_Other_please_complete__c</fullName>
        <label>If &quot;Other&quot; please complete</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Monies_Screen_Print_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Monies Received EBS Screen Print Attached (TH)</inlineHelpText>
        <label>Monies Screen Print Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Ref__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Ref</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Asset Redemptions</relationshipLabel>
        <relationshipName>Asset_Redemptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Property_EBS_Screen_Print_attached_AAE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Property EBS Screen Print attached (AAE)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Redemption_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Redemption Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Asset Redemptions</relationshipLabel>
        <relationshipName>Asset_Redemptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Security_Address__c</fullName>
        <label>Security Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Zero_Balance_Cleared_EBS_Screen_Print__c</fullName>
        <defaultValue>false</defaultValue>
        <description>EBS Screen Print of customer zero balance &amp; cleared (TH &amp; DE)</description>
        <label>Zero Balance &amp; Cleared EBS Screen Print</label>
        <type>Checkbox</type>
    </fields>
    <label>Asset Redemption</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Asset Redemption Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Asset Redemptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>